@@ -12,7 +12,7 @@ You're receiving this e-mail because you requested a password reset for your use
 Please go to the following page and choose a new password : <br/>
 
 {% block reset_link %}
-http://{{ domain }}{% url password_reset_confirm uidb36=uid token=token %}
+http:///{{ domain }}{% url password_reset_confirm uidb36=uid token=token %}
 {% endblock %}
 
 <br/><br/>
