@@ -1,3 +1,4 @@
+Version 63 	 2010-08-23 	 Small changes to password reset 
 Version 62 	 2010-08-22 	 Small change to testing 
 Version 61 	 2010-08-22 	 Added testcases for password reset and greetings 
 Version 60 	 2010-08-22 	 Greetings on Birthdays. Not tested 
